--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -24,13 +23,34 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         pip install -r requirements.txt
-    - name: Lint with flake8
+    - name: Linting
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+    - name: Unit Tests
       run: |
         pip install requests_mock
         pytest
+  publish:
+    runs-on: ubuntu-latest
+    needs: [build]
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+    - name: Install Dependencies
+    run: |
+      python -m pip install --upgrade pip
+      pip install setuptools wheel twine
+    - name: Publish to Pypi
+    env:
+      TWINE_USERNAME: '__token__'
+      TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+    run: |
+      python setup.py sdist bdist_wheel
+      twine upload dist/*
