--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,18 +17,18 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
         id: Install dependencies
-        run: |
+      - run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
           pip install -r requirements.txt
         id: Linting
-        run: |
+      - run: |
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
         id: Unit Tests
-        run: |
+      - run: |
           pip install requests_mock
           pytest
 
@@ -41,13 +41,13 @@ jobs:
         with:
           python-version: '3.x'
         id: Install Dependencies
-        run: |
+      - run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel twine
         id: Publish to Pypi
         env:
           TWINE_USERNAME: '__token__'
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-        run: |
+      - run: |
           python setup.py sdist bdist_wheel
           twine upload dist/*
