--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,18 +16,18 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-        id: Install dependencies
+        id: install-dependencies
       - run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
           pip install -r requirements.txt
-        id: Linting
+        id: linting
       - run: |
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-        id: Unit Tests
+        id: unit-tests
       - run: |
           pip install requests_mock
           pytest
@@ -40,11 +40,11 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.x'
-        id: Install Dependencies
+        id: install-dependencies
       - run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel twine
-        id: Publish to Pypi
+        id: publish-to-pypi
         env:
           TWINE_USERNAME: '__token__'
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
