--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
           pip install setuptools wheel twine
         id: publish-to-pypi
         env:
-          TWINE_USERNAME: '__token__'
+          TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
       - run: |
           python setup.py sdist bdist_wheel
