--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,16 +37,18 @@ jobs:
     needs: [test]
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - name: setup
+        uses: actions/setup-python@v2
         with:
           python-version: '3.x'
-      - run: |
+        run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel twine
       - name: publish
+        uses: actions/setup-python@v2
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-      - run: |
+        run: |
           python setup.py sdist bdist_wheel
           twine upload dist/*
