--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,15 +37,15 @@ jobs:
     needs: [test]
     steps:
       - uses: actions/checkout@v2
-      - name: setup
+      - name: Setup
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
+      - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel twine
       - name: publish
-        uses: actions/setup-python@v2
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
