--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,23 +13,22 @@ jobs:
         python-version: [3.5, 3.6, 3.7, 3.8]
     steps:
       - uses: actions/checkout@v2
+      - name: Setup
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-        id: install-dependencies
-      - run: |
-          # install dependencies
+      - name: install dependencies
+        run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest requests_mock
-        id: linting
-      - run: |
+      - name: linting
+        run: |
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-        id: unit-tests
-      - run: |
-          # unit tests
+      - name: unit tests
+        run: |
           pytest
 
   publish:
@@ -41,11 +40,11 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
-      - name: Install deps
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel twine
-      - name: publish
+      - name: Publish to Pypi
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
