--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Python package
+name: PythonPackage
 
 on:
   push:
@@ -20,7 +20,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest requests_mock
+          pip install -r requirements-dev.txt
       - name: Linting
         run: |
           # stop the build if there are Python syntax errors or undefined names
